--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
     "college"
   ],
   "author": "Dana Silver",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bluebird": "^3.0.5",
+    "lodash": "^3.10.1",
+    "request": "^2.65.0",
+    "xml2js": "^0.4.15"
+  }
 }
