Use const/let, .x for patch version, conditionals in braces.

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "author": "Dana Silver",
   "license": "MIT",
   "dependencies": {
-    "bluebird": "^3.0.5",
-    "lodash": "^3.10.1",
-    "request": "^2.65.0",
-    "xml2js": "^0.4.15"
+    "bluebird": "3.0.x",
+    "lodash": "3.10.x",
+    "request": "2.65.x",
+    "xml2js": "0.4.x"
   }
 }
