--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A JavaScript API for the Middlebury course catalog.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "npm run lint",
     "lint": "./node_modules/eslint/bin/eslint.js **/*.js"
   },
   "repository": {
