--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "middlebury-catalog",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A JavaScript API for the Middlebury course catalog.",
-  "main": "index.js",
+  "main": "src/scraper.js",
   "scripts": {
     "test": "npm run lint",
     "lint": "./node_modules/eslint/bin/eslint.js **/*.js"
